--- a/workspace/GTAcampuS/AndroidManifest.xml
+++ b/workspace/GTAcampuS/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name="Slot" android:screenOrientation="landscape"></activity>
         <activity android:name="courses" android:theme="@style/AppTheme"></activity>
         <activity android:name="CheckData"></activity>
+        <activity android:name="addnote"></activity>
+        <activity android:name="notedata"></activity>
     </application>
 
 </manifest>
