--- a/workspace/GTAcalC/AndroidManifest.xml
+++ b/workspace/GTAcalC/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gtacalc"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="GTAcalC" >
     
     <supports-screens 
     android:resizeable="true" 
