--- a/workspace/GTAcampuS/bin/AndroidManifest.xml
+++ b/workspace/GTAcampuS/bin/AndroidManifest.xml
@@ -7,20 +7,22 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" android:logo="@drawable/ic_launcher">
-        <activity
+        <activity android:name="splash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity><activity
             android:name="com.example.gtacampus.CampusActivity"
             android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name="GTAcalC" android:theme="@style/AppBaseTheme"></activity>
         <activity android:name="Slot" android:screenOrientation="landscape"></activity>
@@ -29,6 +31,9 @@
         <activity android:name="addnote"></activity>
         <activity android:name="notedata"></activity>
         <activity android:name="bunkom"></activity>
+        <receiver android:name="MyAlarmBrdcst"></receiver>
+        <service android:name="MyAlarm"></service>
+        
     </application>
 
 </manifest>
