--- a/workspace/GTAcampuS/bin/AndroidManifest.xml
+++ b/workspace/GTAcampuS/bin/AndroidManifest.xml
@@ -10,13 +10,17 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
     <uses-permission android:name="android.permission.DISABLE_KEYGUARD"/>
-
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+<supports-screens android:anyDensity="true" android:smallScreens="true" android:resizeable="true" android:normalScreens="true" android:largeScreens="true"></supports-screens>
+<uses-permission android:name="android.permission.VIBRATE"/>
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" android:logo="@drawable/ic_launcher">
-        <activity android:name="splash">
+        <activity android:name="splash" android:theme="@android:style/Theme.Dialog">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -33,8 +37,20 @@
         <activity android:name="notedata"></activity>
         <activity android:name="bunkom"></activity>
         <receiver android:name="MyAlarmBrdcst"></receiver>
-        <service android:name="MyAlarm"></service>
-        <activity android:name="alarmnotif" android:launchMode="singleInstance" android:theme="@android:style/Theme.Dialog"></activity>
+        <service android:name="MyAlarm" android:singleUser="false" android:enabled="true" android:stopWithTask="false" android:isolatedProcess="false"></service>
+        <activity android:name="alarmnotif" android:launchMode="singleInstance" android:theme="@android:style/Theme.Dialog" ></activity>
+        <activity android:name="Initialize" android:theme="@android:style/Theme.Dialog"></activity>
+        <receiver android:name="BootsetAlarm" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.TIMEZONE_CHANGED"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.TIME_SET"/>
+            </intent-filter>
+        </receiver>
         
     </application>
 
