--- a/workspace/GTAcampuS/AndroidManifest.xml
+++ b/workspace/GTAcampuS/AndroidManifest.xml
@@ -19,17 +19,17 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:logo="@drawable/ic_launcher">
-        <activity android:name="splash" android:theme="@android:style/Theme.Dialog">
+        android:logo="@drawable/ic_launcher">
+        <activity android:name="splash" android:theme="@android:style/Theme.InputMethod">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity><activity
             android:name="com.example.gtacampus.CampusActivity"
-            android:label="@string/app_name" android:theme="@android:style/Theme.WallpaperSettings" android:logo="@drawable/ic_launcher">
+            android:label="@string/app_name" android:theme="@style/GTATheme" android:logo="@drawable/ic_launcher" android:screenOrientation="fullSensor">
         </activity>
-        <activity android:name="GTAcalC" android:theme="@style/AppBaseTheme"></activity>
+        <activity android:name="GTAcalC" android:theme="@style/AppBaseTheme" android:screenOrientation="portrait"></activity>
         <activity android:name="Slot" android:screenOrientation="landscape"></activity>
         <activity android:name="courses" android:theme="@style/AppTheme"></activity>
         <activity android:name="CheckData"></activity>
@@ -51,6 +51,7 @@
                 <action android:name="android.intent.action.TIME_SET"/>
             </intent-filter>
         </receiver>
+        <activity android:name="Alarmsetter"></activity>
         
     </application>
 
