--- a/workspace/GTAcampuS/bin/AndroidManifest.xml
+++ b/workspace/GTAcampuS/bin/AndroidManifest.xml
@@ -28,7 +28,8 @@
         </activity><activity
             android:name="com.example.gtacampus.CampusActivity"
             android:label="@string/app_name" android:theme="@style/GTATheme" android:logo="@drawable/ic_launcher" android:screenOrientation="fullSensor">
-        <intent-filter><category android:name="android.intent.category.HOME"/></intent-filter>
+        <intent-filter><category android:name="android.intent.category.HOME"/>
+</intent-filter>
         </activity>
         <activity android:name="GTAcalC" android:theme="@style/AppBaseTheme" android:screenOrientation="portrait"></activity>
         <activity android:name="Slot" android:screenOrientation="landscape"></activity>
@@ -40,7 +41,7 @@
         <receiver android:name="MyAlarmBrdcst"></receiver>
         <service android:name="MyAlarm" android:singleUser="false" android:enabled="true" android:stopWithTask="false" android:isolatedProcess="false"></service>
         <activity android:name="alarmnotif" android:launchMode="singleInstance" android:theme="@android:style/Theme.Dialog"></activity>
-        <activity android:name="Initialize" android:theme="@android:style/Theme.Dialog"></activity>
+        <activity android:name="Initialize"></activity>
         <receiver android:name="BootsetAlarm" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
