Added extra alarm activities

--- a/workspace/GTAcampuS/AndroidManifest.xml
+++ b/workspace/GTAcampuS/AndroidManifest.xml
@@ -57,6 +57,7 @@
         <activity android:name="AlarmOptions"></activity>
         <activity android:name="AlarmRepeater"  android:theme="@android:style/Theme.InputMethod"></activity>
         <activity android:name="gtaconvertor"></activity>
+        <activity android:theme="@android:style/Theme.Dialog" android:name="Textviewer"></activity>
         
     </application>
 
