--- a/workspace/GTAcampuS/AndroidManifest.xml
+++ b/workspace/GTAcampuS/AndroidManifest.xml
@@ -41,7 +41,7 @@
         <receiver android:name="MyAlarmBrdcst"></receiver>
         <service android:name="MyAlarm" android:singleUser="false" android:enabled="true" android:stopWithTask="false" android:isolatedProcess="false"></service>
         <activity android:name="alarmnotif" android:launchMode="singleInstance" android:theme="@android:style/Theme.Dialog"></activity>
-        <activity android:name="Initialize"></activity>
+        <activity android:name="Initialize" android:screenOrientation="landscape"></activity>
         <receiver android:name="BootsetAlarm" android:permission="android.permission.RECEIVE_BOOT_COMPLETED">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
