--- a/workspace/GTAcampuS/bin/AndroidManifest.xml
+++ b/workspace/GTAcampuS/bin/AndroidManifest.xml
@@ -15,6 +15,8 @@
 <uses-permission android:name="android.permission.VIBRATE"/>
 <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+<uses-permission android:name="android.permission.INTERNET"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     
     <application
         android:allowBackup="true"
@@ -61,6 +63,8 @@
         <activity android:theme="@android:style/Theme.Dialog" android:name="com.example.gtacampus.Textviewer"></activity>
         <activity android:name="com.example.gtacampus.Password" android:logo="@drawable/ic_launcher" android:icon="@drawable/ic_launcher" android:theme="@android:style/Theme.InputMethod"></activity>
         <activity android:name="com.example.gtacampus.Settings" android:excludeFromRecents="true" android:noHistory="true"></activity>
+        <activity android:name="com.example.gtacampus.Messages" android:permission="android.permission.INTERNET"></activity>
+        <activity android:name="com.example.gtacampus.Inbox" android:permission="android.permission.INTERNET"></activity>
         
     </application>
 
