--- a/workspace/Counter/bin/AndroidManifest.xml
+++ b/workspace/Counter/bin/AndroidManifest.xml
@@ -15,15 +15,15 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.camp.counter.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="tallyclass"></activity>
-        <activity android:name="analytics"></activity>
+        <activity android:name="tallyclass" android:configChanges="orientation"></activity>
+        <activity android:name="analytics" android:configChanges="orientation"></activity>
     </application>
 
 </manifest>
