--- a/workspace/Counter/bin/AndroidManifest.xml
+++ b/workspace/Counter/bin/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-sdk
         android:minSdkVersion="10"
         android:targetSdkVersion="16" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -15,15 +16,15 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.camp.counter.MainActivity"
-            android:label="@string/app_name" android:configChanges="orientation">
+            android:label="@string/app_name" android:configChanges="orientation" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="tallyclass" android:configChanges="orientation"></activity>
-        <activity android:name="analytics" android:configChanges="orientation"></activity>
+        <activity android:name="tallyclass" android:configChanges="orientation" android:screenOrientation="portrait"></activity>
+        <activity android:name="analytics" android:configChanges="orientation" android:permission="android.permission.WRITE_EXTERNAL_STORAGE"></activity>
     </application>
 
 </manifest>
